--- a/design/postcss/containers/_section-team.css
+++ b/design/postcss/containers/_section-team.css
@@ -10,6 +10,10 @@ $member-container-medium-desktop-width: 280px;
 $member-container-medium-desktop-height: 305px;
 $member-img-medium-desktop-width: 135px;
 
+$member-container-mobile-width: 270px;
+$member-container-mobile-height: 295px;
+$member-img-mobile-width: 130px;
+
 
 .section-team {
     background-color: #f0f6fe;
@@ -138,7 +142,7 @@ $member-img-medium-desktop-width: 135px;
     }
 }
 
-@media $breakpoint-tablet   {
+@media $breakpoint-big-mobile   {
     .member-container-desktop {
         display: none;
     }
@@ -149,6 +153,8 @@ $member-img-medium-desktop-width: 135px;
         &:before {
             width: $member-container-big-desktop-width;
             height: $member-container-big-desktop-height;
+            margin-top: 82px;
+            margin-left: 7px;
         }
     }
 
@@ -172,6 +178,8 @@ $member-img-medium-desktop-width: 135px;
         &:before {
             width: $member-container-medium-width;
             height: $member-container-medium-height;
+            margin-top: 74px;
+            margin-left: 4px;
         }
     }
 
@@ -203,6 +211,59 @@ $member-img-medium-desktop-width: 135px;
             width: 35px;
             height: 35px;
             top: calc($member-img-medium-desktop-width / 2 - 35px);
+
+            &:after {
+                width: 35px;
+                height: 35px;
+            }
+        }
+    }
+}
+
+@media $breakpoint-big-mobile{
+    .section-team {
+        .section {
+            padding: 40px 0;
+        }
+    }
+
+    .member-container-shadow {
+        &:before {
+            width: $member-container-mobile-width;
+            height: $member-container-mobile-height;
+            margin-top: 69px;
+            margin-left: 3px;
+        }
+    }
+
+    .member-container {
+        width: $member-container-mobile-width;
+        min-height: $member-container-mobile-height;
+        margin-top: calc($member-img-mobile-width / 2);
+        padding-top: calc($member-img-mobile-width / 2 + 25px);
+
+        .link {
+            width: 36px;
+            height: 36px;
+            top: calc($member-img-mobile-width / 2 - 36px);
+
+            &:after {
+                width: 36px;
+                height: 36px;
+            }
+        }
+    }
+
+    .member-img {
+        width: $member-img-mobile-width;
+        height: $member-img-mobile-width;
+        left: calc(($member-container-mobile-width - $member-img-mobile-width) / 2);
+        transform: translate(0, calc($member-img-mobile-width / 2 * -1));
+
+        .link {
+            width: 35px;
+            height: 35px;
+            top: calc($member-img-mobile-width / 2 - 35px);
 
             &:after {
                 width: 35px;
