--- a/design/postcss/generals/_global.css
+++ b/design/postcss/generals/_global.css
@@ -123,13 +123,28 @@ input[type=text], input[type=email], textarea {
 	}
 }
 
-@media $breakpoint-big-mobile {
-    .section {
-		padding: 40px 30px;
+@media $breakpoint-wide-tablets {
+	.logo-img {
+		width: 50px;
+		height: 33px;
+	}
+
+	.logo-text {
+		font-size: 28px;
+		line-height: 36px;
+	}
+
+	.nav-wrap {
+		top: 28px;
+		left: 185px;
 	}
 }
 
-@media $breakpoint-tablet {
+@media $breakpoint-big-mobile {
+	.section {
+		padding: 40px 30px;
+	}
+
 	.logo-img {
 		width: 48px;
     	height: 28px;
