--- a/design/postcss/components/_subscription.css
+++ b/design/postcss/components/_subscription.css
@@ -55,7 +55,7 @@
 }
 
 .email-subscription-input {
-    min-width: 250px;
+    min-width: 255px;
     min-height: 35px;
     display: flex;
     border-top-left-radius: 5px;
@@ -135,5 +135,11 @@
         border: none;
         background-color: #1ec0ff;
         color: #ffffff;
+    }
+}
+
+@media $breakpoint-tablet{
+    .email-subscription-input {
+        min-width: calc(100% - 70px);
     }
 }
