--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -370,6 +370,10 @@
         }
     }
 
+    .mobile-slider-circle-container {
+        position: relative;
+    }
+
 
     @media $breakpoint-big-desktop{
         .section-exchange-video {
@@ -394,6 +398,72 @@
     }
 
     @media $breakpoint-tablet {
+        .section-title {
+            margin-bottom: 20px;
+            font-size: 32px;
+        }
+        .section-msg {
+            font-size: 13px;
+        }
+        .section-exchange-video {
+            width: 100%;
+            height: 200px;
+            margin-top: 35px;
+        }
+
+        .list-desc {
+            max-width: 95%;
+            font-size: 15px;
+            .title {
+                font-size: 13px;
+            }
+        }
+        .desktop-slider-item {
+            width: 100%;
+            padding: 20px 5px 5px 25px;
+            &:before {
+                width: 14px;
+                height: 14px;
+                top: 14px;
+                left: 5px;
+            }
+            .title {
+                font-size: 14px;
+            }
+
+            .desc {
+                font-size: 12px;
+            }
+        }
+
+        .desktop-slider-circle-2 {
+            width: 60px;
+            height: 60px;
+            top: 43%;
+            left: 33%;
+            &:before {
+                width: 50%;
+                height: 50%;
+                top: 25%;
+                left: 35%;
+            }
+        }
+
+        .desktop-slider-circle-3 {
+            width: 50px;
+            height: 50px;
+            top: calc(35% + 50px);
+            left: calc(30% + 50px);
+            &:before {
+                width: 50%;
+                height: 50%;
+                top: 25%;
+                left: 35%;
+            }
+        }
+    }
+
+    @media $breakpoint-big-mobile {
         .list-desc {
             max-width: 95%;
         }
