--- a/design/postcss/generals/_global.css
+++ b/design/postcss/generals/_global.css
@@ -138,6 +138,13 @@ input[type=text], input[type=email], textarea {
 		top: 28px;
 		left: 185px;
 	}
+
+	.section {
+		padding: 50px 30px;
+		.section-title {
+			font-size: 34px;
+		}
+	}
 }
 
 @media $breakpoint-big-mobile {
