--- a/design/postcss/variables/_responsive.css
+++ b/design/postcss/variables/_responsive.css
@@ -1,6 +1,7 @@
 $breakpoint-small-mobile: screen and (max-width: 320px);
 $breakpoint-medium-mobile: screen and (max-width: 375px);
 $breakpoint-big-mobile: screen and (max-width: 568px);
+$breakpoint-small-tablet: screen and (max-width: 600px);
 $breakpoint-tablet: screen and (max-width: 768px);
 $breakpoint-wide-tablets: screen and (max-width: 840px);
 $breakpoint-medium-desktop: screen and (max-width: 1080px);
