--- a/design/postcss/components/_header.css
+++ b/design/postcss/components/_header.css
@@ -92,6 +92,10 @@
     display: none;
 }
 
+.mobile-email-subscription-img {
+    display: none;
+}
+
 @media $breakpoint-wide-tablets {
     .header {
         .logo {
@@ -245,9 +249,12 @@
         text-align: center;
     }
 
-    .email-subscription-img {
+    .mobile-email-subscription-img {
+        display: block;
         position: absolute;
         right: 12px;
         top: 15px;
+        z-index: 100;
+        cursor: pointer;
     }
 }
