--- a/design/postcss/generals/_icon.css
+++ b/design/postcss/generals/_icon.css
@@ -37,3 +37,10 @@
 .icon-social-reddit {
     background-image: resolve('icon-reddit.svg');
 }
+
+@media $breakpoint-big-mobile {
+    .icon-social {
+        width: 21px;
+        height: 18px;
+    }
+}
