--- a/design/postcss/containers/_section-media.css
+++ b/design/postcss/containers/_section-media.css
@@ -185,6 +185,26 @@
         margin-right: 10px;
         display: inline-block;
     }
+
+    .section-media {
+        .section-title {
+            font-size: 33px;
+        }
+    }
+
+    .media-desktop-link {
+        display: none;
+    }
+
+    .media-link {
+        height: 50px;
+    }
+
+    .media-s-link {
+        width: 110px;
+        height: 20px;
+        display: inline-block;
+    }
 }
 
 @media $breakpoint-big-desktop{
