--- a/design/postcss/containers/_section-roadmap.css
+++ b/design/postcss/containers/_section-roadmap.css
@@ -1,4 +1,5 @@
 .section-roadmap {
+    background-color: #f0f6fe;
     font-size: 19px;
     line-height: 1.53;
     color: #133364;
@@ -88,4 +89,29 @@
 
 .slick-slide div {
     outline: 0;
+}
+
+@media $breakpoint-big-mobile {
+    .section-roadmap {
+        .section {
+            padding: 40px 0;
+        }
+
+        .section-title {
+            margin-left: 30px;
+            font-size: 33px;
+        }
+
+        .roadmap-item {
+            line-height: 1.84;
+            .title {
+                margin: 22px 0;
+                font-size: 23px;
+            }
+        }
+
+        .arrow {
+            display: none;
+        }
+}
 }
