--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -103,19 +103,40 @@
     }
 
     .section-exchange-video-container {
+        position: relative;
         z-index: 3;
     }
 
     .section-exchange-video {
         width: 500px;
         height: 365px;
+        position: relative;
         margin-top: 65px;
         background-image: resolve('mv.jpg');
-        background-size: contain;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
         display: inline-block;
         border-radius: 6.7px;
         cursor: pointer;
+        z-index: 4;
+    }
+
+    .section-exchange-video-shadow {
+        &:before {
+            width: 500px;
+            height: 365px;
+            position: absolute;
+            top: 4px;
+            margin-top: 65px;
+            margin-left: 4px;
+            opacity: 0.25;
+            border-radius: 5px;
+            filter: blur(20.3px);
+            background-image: linear-gradient(to left, #133364, #0087ff);
+            content: '';
+            display: inline-block;
+            z-index: 3;
+        }
     }
 
     .list-container {
@@ -381,6 +402,13 @@
             height: 338px;
         }
 
+        .section-exchange-video-shadow {
+            &:before {
+                width: 475px;
+                height: 338px;
+            }
+        }
+
         .desktop-slider-item {
             width: 93%;
         }
@@ -390,6 +418,13 @@
         .section-exchange-video {
             width: 450px;
             height: 322px;
+        }
+
+        .section-exchange-video-shadow {
+            &:before {
+                width: 450px;
+                height: 322px;
+            }
         }
 
         .desktop-slider-item {
@@ -409,6 +444,14 @@
             width: 100%;
             height: 200px;
             margin-top: 35px;
+        }
+
+        .section-exchange-video-shadow {
+            &:before {
+                width: 100%;
+                height: 200px;
+                margin-top: 35px;
+            }
         }
 
         .list-desc {
@@ -491,6 +534,13 @@
 
         .section-exchange-video {
             width: 100%;
+        }
+
+        .section-exchange-video-shadow {
+            &:before {
+                width: 100%;
+                height: 86%;
+            }
         }
 
         .section-exchange-bg {
