--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -51,8 +51,8 @@
 
     .section-msg {
         max-width: 70%;
-        font-size: 17px;
-        line-height: 1.59;
+        font-size: 20px;
+        line-height: 1.5;
         color: #133364;
         display: block;
     }
@@ -251,9 +251,24 @@
             animation: slide 1.5s;
         }
 
+        .loader-circle-left {
+            transform-origin: right;
+            opacity: 0.95;
+            margin-left: 20px;
+            z-index: 2;
+            animation: slide 1.5s;
+            opacity: 0.8;
+            background-color: #2c9afc;
+        }
+
         .loader-circle-right {
+            transform-origin: left;
+            margin-left: -20px;
+            z-index: 1;
             animation: slide 1.5s;
             animation-delay: 2s;
+            opacity: 0.8;
+            background-color: #43c7fc;
         }
     }
 
@@ -444,11 +459,12 @@
             width: 100%;
             height: 200px;
             margin-top: 35px;
+            background-size: contain;
         }
 
         .section-exchange-video-shadow {
             &:before {
-                width: 100%;
+                width: 85%;
                 height: 200px;
                 margin-top: 35px;
             }
@@ -669,6 +685,15 @@
 
         .section-exchange-right-bg {
             top: 15%;
+        }
+
+        .section-exchange-left-bottom-bg {
+            width: 40%;
+            height: 62px;
+            bottom: 0;
+            background-image: resolve('exchange-mobile-bg-left-bottom.svg');
+            background-position: left;
+            background-size: contain;
         }
     }
 }
