--- a/design/postcss/containers/_section-media.css
+++ b/design/postcss/containers/_section-media.css
@@ -66,7 +66,7 @@
 
 .media-container-hover{
     .media-img {
-        background-size: 105% 105%;
+        background-size: 110% 110%;
     }
 }
 
@@ -101,6 +101,7 @@
 
 .media-link {
     height: 65px;
+    background-position: 50% 50%;
     background-size: contain;
     background-repeat: no-repeat;
 }
