--- a/design/postcss/components/_header.css
+++ b/design/postcss/components/_header.css
@@ -259,5 +259,9 @@
         top: 15px;
         z-index: 100;
         cursor: pointer;
+
+        &.open {
+            display: none;
+        }
     }
 }
