--- a/design/postcss/containers/_home.css
+++ b/design/postcss/containers/_home.css
@@ -101,6 +101,11 @@
         text-align: center;
         z-index: 3;
 
+        a {
+            display: inline-block;
+            padding-right: 20px;
+        }
+
         .left-link {
             margin-right: 50px;
         }
@@ -131,11 +136,11 @@
             color: #1ec0ff;
             vertical-align: bottom;
             line-height: 40px;
-
+            
             &.small {
                 font-size: 15px;
                 line-height: 38px;
-
+                
                 &:after {
                     width: 14px;
                     height: 14px;
@@ -156,7 +161,7 @@
     width: 55px;
     height: 55px;
     position: fixed;
-    bottom: 60px;
+    bottom: 20px;
     right: 20px;
     border-radius: 50%;
     background-color: #1ec0ff;
@@ -189,6 +194,9 @@
 
         .rate-link {
             padding: 5px 0 41px 0;
+            .left-link {
+                margin-right: 25px;
+            }
         }
 
         .desktop-rate-link {
