--- a/design/postcss/generals/_icon.css
+++ b/design/postcss/generals/_icon.css
@@ -3,6 +3,7 @@
     height: 27px;
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
 
@@ -40,7 +41,7 @@
 
 @media $breakpoint-big-mobile {
     .icon-social {
-        width: 21px;
-        height: 18px;
+        width: 25px;
+        height: 21px;
     }
 }
