--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -32,12 +32,10 @@
     position: relative;
     background-color: #f0f6fe;
 
-    .slick-list {
-        overflow: initial;
-    }
-
     .section {
+        position: relative;
         padding-bottom: 130px;
+        overflow: hidden;
     }
 
     .section-title {
@@ -510,8 +508,10 @@
     }
 
     @media $breakpoint-big-mobile {
+        padding-bottom: 130px;
+
         .section {
-            padding-bottom: 90px;
+            padding-bottom: 0px;
         }
         .list-desc {
             max-width: 95%;
@@ -616,18 +616,18 @@
             background-position: center center;
             display: flex;
         }
-    
+
         .mobile-slider-circle-2 {
             position: absolute;
             top: 30%;
             left: 20%;
             z-index: 2;
             width: 130px;
-            height: 130px;            
+            height: 130px;
             opacity: 0.8;
             background-color: #0087ff;
             border-radius: 50%;
-    
+
             &:before {
                 width: 100%;
                 height: 100%;
@@ -639,7 +639,7 @@
                 background-position: center;
             }
         }
-    
+
         .mobile-slider-circle-3 {
             width: 90px;
             height: 92px;
@@ -650,7 +650,7 @@
             background-color: #1ec0ff;
             border-radius: 50%;
             z-index: 1;
-    
+
             &:before {
                 width: 100%;
                 height: 100%;
@@ -671,7 +671,7 @@
 
         .section-msg {
             max-width: initial;
-        }   
+        }
 
         .list-desc {
             max-width: initial;
@@ -684,7 +684,7 @@
         }
 
         .section-exchange-right-bg {
-            top: 10%;
+            top: 11%;
             right: -20%;
             background-size: auto 80%;
         }
