--- a/design/postcss/containers/_home.css
+++ b/design/postcss/containers/_home.css
@@ -62,13 +62,13 @@
     }
 
     .section-mainly-bg {
-        width: 700px;
+        width: 100%;
         height: 346px;
         position: absolute;
         top: 0;
         left: 0;
         background-image: resolve('macbook.png');
-        background-size: 100% 100%;
+        background-size: auto 100%;
         background-repeat: no-repeat;
         z-index: 3;
     }
