--- a/design/postcss/containers/_section-economics.css
+++ b/design/postcss/containers/_section-economics.css
@@ -208,7 +208,7 @@
         }
 
         .chart-container {
-            padding: 0 30px;
+            padding: 0 30px 40px 30px;
         }
     }
 }
@@ -218,6 +218,10 @@
     .section-economics {
         .section-sub-title {
             font-size: 25px;
+        }
+
+        .chart-container {
+            padding: 0 30px;
         }
 
         .chart-container-pie {
