--- a/design/postcss/containers/_section-team.css
+++ b/design/postcss/containers/_section-team.css
@@ -73,6 +73,27 @@ $member-img-mobile-width: 130px;
     }
 }
 
+.section-team-list {
+    position: relative;
+    display: inline-block;
+    white-space: nowrap;
+    margin-left: 30px;
+    padding-right: 30px;
+
+    .member-container-shadow {
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .member-container {
+        margin-right: 10px;
+    }
+
+    .member-desc {
+        white-space: initial;
+    }
+}
+
 .member-container {
     position: relative;
     width: $member-container-xbig-desktop-width;
